# Folk

./: .gitignore  DEPLOY.md  docker-compose.prod.yml
Folk-API/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  manage.py  pyproject.toml
Folk-API/competition/: admin.py  emailing.py  models.py  pagination.py  privacy.py  query_helpers.py  serializers.py  tasks.py  views.py
Folk-API/competition/migrations/: 0001_initial.py  0002_evento_slug_organizador_usuario.py  0003_participante_email.py  0004_fase2_modelos.py  0005_fase3_participante_usuario.py  0006_empresa_perfil.py  0007_equipo_miembros.py  0008_cronograma_agenda.py  0009_categoriaritmo_precio_adicional_evento_banner_and_more.py  0010_evento_pago_folk.py  0011_organizador_max_eventos.py  0012_juez_categorias.py  0013_siteconfig.py  0014_evento_multimodalidad_categoria_costo.py  0015_siteconfig_aviso_privacidad_corto_and_more.py  0016_siteconfig_email.py  0017_organizador_whatsapp_evento_whatsapp.py  0018_organizador_notas_internas.py  0019_organizador_plan.py  0020_siteconfig_email_provider_and_more.py
Folk-API/config/: celery.py  settings.py  urls.py
folk-web/: Dockerfile.prod  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
folk-web/src/: middleware.ts
folk-web/src/app/: error.tsx  globals.css  home-page-client.tsx  layout.tsx  not-found.tsx  page.tsx
folk-web/src/app/(dashboard)/: layout.tsx
folk-web/src/app/(juez)/: layout.tsx
folk-web/src/lib/: api-client.ts  jwt.ts  public-api-client.ts  query-client.ts  server-auth.ts
(+62 files in other folders)
